--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll Numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Anushree</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Tanushree</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Bhagyashree</td>
+			</tr>
+		</tbody>
+	</table>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300"></li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+		</li>
+		<li>
+			<audio controls>
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
