--- a/main.html
+++ b/main.html
@@ -32,14 +32,13 @@
 	</table>
 	<h3>List of medias</h3>
 	<ol>
-		<li><img src="https://picsum.photos/id/123/200/300"></li>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="#"></li>
 		<li>
 			<video controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 		</li>
 		<li>
-			<audio controls>
-				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
